Fix invalid index on resource creation

On debug builds this can trigger a QAbstractItemModel assert because
a negative index is used.

BUG: 436510