src/core/resourcerepository.cpp
@@ -122,7 +122,7 @@ bool ResourceRepository::loadCourse(const QString &resourceFile)
         return false;
     }
 
-    emit courseAboutToBeAdded(resource, m_courses.count() - 1);
+    emit courseAboutToBeAdded(resource, m_courses.count());
     m_courses.append(resource);
     emit courseAdded();
     m_loadedCourses.append(resourceFile);
